--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Relógio com JavaScript</title>
 
-    <link rel="stylesheet" href="/assets/style.css">
+    <link rel="stylesheet" href="/style.css">
 
 </head>
 <body>
@@ -33,6 +33,6 @@
         </div>
     </div>
 
-    <script src="/assets/script.js"></script>
+    <script src="/script.js"></script>
 </body>
 </html>
