--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Relógio com JavaScript</title>
+    <title>Relógio Digital</title>
 
+    <link rel="shortcut icon" href="/relogio.png" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
 
 </head>
