--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#000">
     <title>Relógio Digital</title>
-
     <link rel="shortcut icon" href="/relogio.png" type="image/x-icon">
     <link rel="stylesheet" href="/style.css">
 
